tests/ui/impl-trait/recursive-impl-trait-type-indirect.stderr
error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:9:22
   |
LL | fn option(i: i32) -> impl Sized {
   |                      ^^^^^^^^^^ recursive opaque type
LL |
LL |     if i < 0 { None } else { Some((option(i - 1), i)) }
   |                ----          ------------------------ returning here with type `Option<(impl Sized, i32)>`
   |                |
   |                returning here with type `Option<(impl Sized, i32)>`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:14:15
   |
LL | fn tuple() -> impl Sized {
   |               ^^^^^^^^^^ recursive opaque type
LL |
LL |     (tuple(),)
   |     ---------- returning here with type `(impl Sized,)`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:19:15
   |
LL | fn array() -> impl Sized {
   |               ^^^^^^^^^^ recursive opaque type
LL |
LL |     [array()]
   |     --------- returning here with type `[impl Sized; 1]`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:24:13
   |
LL | fn ptr() -> impl Sized {
   |             ^^^^^^^^^^ recursive opaque type
LL |
LL |     &ptr() as *const _
   |     ------------------ returning here with type `*const impl Sized`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:29:16
   |
LL | fn fn_ptr() -> impl Sized {
   |                ^^^^^^^^^^ recursive opaque type
LL |
LL |     fn_ptr as fn() -> _
   |     ------------------- returning here with type `fn() -> impl Sized`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:34:25
   |
LL |   fn closure_capture() -> impl Sized {
   |                           ^^^^^^^^^^ recursive opaque type
...
LL | /     move || {
LL | |         x;
   | |         - closure captures itself here
LL | |     }
   | |_____- returning here with type `{closure@$DIR/recursive-impl-trait-type-indirect.rs:37:5: 37:12}`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:42:29
   |
LL |   fn closure_ref_capture() -> impl Sized {
   |                               ^^^^^^^^^^ recursive opaque type
...
LL | /     move || {
LL | |         &x;
   | |          - closure captures itself here
LL | |     }
   | |_____- returning here with type `{closure@$DIR/recursive-impl-trait-type-indirect.rs:45:5: 45:12}`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:50:21
   |
LL | fn closure_sig() -> impl Sized {
   |                     ^^^^^^^^^^ recursive opaque type
LL |
LL |     || closure_sig()
   |     ---------------- returning here with type `{closure@$DIR/recursive-impl-trait-type-indirect.rs:52:5: 52:7}`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:55:23
   |
LL | fn coroutine_sig() -> impl Sized {
   |                       ^^^^^^^^^^ recursive opaque type
LL |
LL |     || coroutine_sig()
   |     ------------------ returning here with type `{closure@$DIR/recursive-impl-trait-type-indirect.rs:57:5: 57:7}`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:60:27
   |
LL |   fn coroutine_capture() -> impl Sized {
   |                             ^^^^^^^^^^ recursive opaque type
...
LL | /     move || {
LL | |         yield;
LL | |         x;
   | |         - coroutine captures itself here
LL | |     }
   | |_____- returning here with type `{coroutine@$DIR/recursive-impl-trait-type-indirect.rs:63:5: 63:12}`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:69:35
   |
LL | fn substs_change<T: 'static>() -> impl Sized {
   |                                   ^^^^^^^^^^ recursive opaque type
LL |
LL |     (substs_change::<&T>(),)
   |     ------------------------ returning here with type `(impl Sized,)`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:79:26
   |
LL | fn mutual_recursion() -> impl Sync {
   |                          ^^^^^^^^^ recursive opaque type
LL |
LL |     mutual_recursion_b()
   |     -------------------- returning here with type `impl Sized`
...
LL | fn mutual_recursion_b() -> impl Sized {
   |                            ---------- returning this opaque type `impl Sized`

error[E0720]: cannot resolve opaque type
  --> $DIR/recursive-impl-trait-type-indirect.rs:84:28
   |
LL | fn mutual_recursion() -> impl Sync {
   |                          --------- returning this opaque type `impl Sync`
...
LL | fn mutual_recursion_b() -> impl Sized {
   |                            ^^^^^^^^^^ recursive opaque type
LL |
LL |     mutual_recursion()
   |     ------------------ returning here with type `impl Sync`

error[E0275]: overflow evaluating the requirement `impl Sized`
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`recursive_impl_trait_type_indirect`)

error[E0275]: overflow evaluating the requirement `impl Sized`
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`recursive_impl_trait_type_indirect`)
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0275]: overflow evaluating the requirement `impl Sized`
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`recursive_impl_trait_type_indirect`)
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 16 previous errors

Some errors have detailed explanations: E0275, E0720.
For more information about an error, try `rustc --explain E0275`.
